# aoc2024

_build/: .db  .digest-db  log
_build/default/: aoc.install
_build/default/.dune/: configurator  configurator.v2
_build/default/days/: days.cma  days.cmxa  days.cmxs  days.ml-gen
_build/default/days/.days.objs/: days__Day01.impl.d
_build/default/days/.days.objs/byte/: days.cmi  days.cmo  days.cmt  days__Day01.cmi  days__Day01.cmo  days__Day01.cmt
_build/default/days/.days.objs/native/: days.cmx  days__Day01.cmx
_build/default/days/.merlin-conf/: lib-days
_build/default/lib/: aoc.cma  aoc.cmxa  aoc.cmxs
_build/default/lib/.aoc.objs/byte/: aoc.cmi  aoc.cmo  aoc.cmt
_build/default/lib/.aoc.objs/native/: aoc.cmx
_build/default/lib/.merlin-conf/: lib-aoc
_build/default/test/.merlin-conf/: exe-test_aoc
_build/default/test/.test_aoc.eobjs/byte/: dune__exe__Test_aoc.cmti
_build/install/default/lib/aoc/: dune-package
days/: day01.ml  day01_first.ml  day01_second.ml  day02_first.ml  day02_second.ml  day02_shared.ml  day03_first.ml  day03_second.ml  day03_shared.ml  day04_first.ml  day04_second.ml  day04_shared.ml  day05_first.ml  day05_second.ml  day05_shared.ml  day06_first.ml  day06_second.ml  day06_shared.ml  day07_first.ml  day07_second.ml  day08_first.ml  day08_second.ml  day08_shared.ml  day09_first.ml  day09_second.ml  day09_shared.ml  day10_first.ml  day10_second.ml  day10_shared.ml  day11_first.ml  day11_second.ml  day11_shared.ml  day12_first.ml  day12_second.ml  day13_first.ml  day13_second.ml  day13_shared.ml  day14_first.ml  day14_second.ml  day14_shared.ml  (+18 more)
inputs/: day2_edge_cases_test.txt  test_input.txt
lib/: dune  input_reader.ml  pretty_printer.ml  util.ml
test/: dune  test_day01.ml  test_day02.ml  test_day03.ml  test_day04.ml  test_day05.ml  test_day06.ml  test_day07.ml  test_day08.ml  test_day09.ml  test_day10.ml  test_day11.ml  test_day12.ml  test_day13.ml  test_day14.ml  test_day15.ml  test_day16.ml  test_day17.ml  test_day18.ml  test_day19.ml  test_day20.ml  test_input_reader.ml  test_pretty_printer.ml  test_util.ml
