(test
 (name test_input_reader)
 (deps ../inputs/test_input.txt)
 (libraries ounit2 input_reader pretty_printer))

(test
 (name test_util)
 (libraries ounit2 util pretty_printer))

(test
 (name test_pretty_printer)
 (libraries ounit2 pretty_printer))

(test
 (name test_day01)
 (deps ../inputs/day1_test.txt)
 (libraries ounit2 days))

(test
 (name test_day02)
 (deps ../inputs/day2_test.txt ../inputs/day2_edge_cases_test.txt)
 (libraries ounit2 days))

(test
 (name test_day03)
 (deps ../inputs/day3_test.txt)
 (libraries ounit2 days))

(test
 (name test_day04)
 (deps ../inputs/day4_test.txt)
 (libraries ounit2 days))

(test
 (name test_day05)
 (deps ../inputs/day5_test.txt)
 (libraries ounit2 days))

(test
 (name test_day06)
 (deps ../inputs/day6_test.txt)
 (libraries ounit2 days))

(test
 (name test_day07)
 (deps ../inputs/day7_test.txt)
 (libraries ounit2 days))

(test
 (name test_day08)
 (deps ../inputs/day8_test.txt)
 (libraries ounit2 days))

(test
 (name test_day09)
 (deps ../inputs/day9_test.txt)
 (libraries ounit2 days))

(test
 (name test_day10)
 (deps ../inputs/day10_test.txt)
 (libraries ounit2 days))

(test
 (name test_day11)
 (deps ../inputs/day11_test.txt)
 (libraries ounit2 days))

(test
 (name test_day12)
 (deps ../inputs/day12_test.txt)
 (libraries ounit2 days))

(test
 (name test_day13)
 (deps ../inputs/day13_test.txt)
 (libraries ounit2 days))

(test
 (name test_day14)
 (deps ../inputs/day14_test.txt)
 (libraries ounit2 days))

(test
 (name test_day15)
 (deps ../inputs/day15_test_0.txt ../inputs/day15_test_1.txt)
 (libraries ounit2 days))

(test
 (name test_day16)
 (deps ../inputs/day16_test_0.txt ../inputs/day16_test_1.txt)
 (libraries ounit2 days))

(test
 (name test_day17)
 (deps ../inputs/day17_test_0.txt ../inputs/day17_test_1.txt)
 (libraries ounit2 days))

(test
 (name test_day18)
 (deps ../inputs/day18_test.txt)
 (libraries ounit2 days))
